added some liness

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <pluginRepository>
             <id>mesosphere-repo</id>
             <name>Mesosphere Repo</name>
-            <url>http://downloads.mesosphere.io/maven</url> ------------->
+            <url>http://downloads.mesosphere.io/maven</url> 
         </pluginRepository>
     </pluginRepositories>
     <build>
